updated at: 2023-04-25 17:53, WingHairAcc ver1.00 - RacoonStudio - BOOTH

--- a/VRChat/35/1146935.html
+++ b/VRChat/35/1146935.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Pfh8YuW6iZZlBdNnu802cGwr8bzn7VhmWe81fE4NNQM="></script>
+    "0LM6GWn/xHyrLHGa/b7kyvpNYhDHo+0MsAlkZYcxV2s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"WingHairAcc ver1.00","description":"少しサイバーティックな髪飾りです。\n\n三角面：714\n\n説明\n\t・XSfur Shaderを用いたファーが付いたプレハブとStandard Shaderのみを用いたプレハブを用意しています。\n\t・このモデルは一部XSfur Shaderを用いています。お持ちでない場合はStandard Shaderのみのプレハブ、HairAcc_Gemを使用してください。\n\t・XSfurはBoothにてxiexe氏が販売しています(https://booth.pm/ja/items/1084711)\n\n免責事項\nこのデータを使用したことによって生じた問題に関しましては、責任を負いかねます。\n自己責任でのご使用をお願い致します。\n\n使用条件\n\t・修正、改造、商用利用は可能です。\n\t・商用利用する場合は、連絡は必要ありません。\n\t・二次配布は改変後でもご遠慮お願いします。\n\t・政治的、差別的な用途への利用、またはそれに関連したことのあるものに対しての利用はご遠慮ください。\n\t・その他、ご不明なことがあれば下の連絡先にご連絡ください。\n\n2018.12.23\n製作者：アライラク\nTwitter：@AraiRacu\nメール：arairacu@gmail.com","url":"https://booth.pm/ja/items/1146935","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3716aa23-2578-43df-8aa4-dacbc0df9ce1/i/1146935/451ad27e-e961-45c1-b9bc-b6e028d732a4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pfh8YuW6iZZlBdNnu802cGwr8bzn7VhmWe81fE4NNQM="></script>
+    nonce="0LM6GWn/xHyrLHGa/b7kyvpNYhDHo+0MsAlkZYcxV2s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146935/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146935/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
