--- a/VRChat/15/1146815.html
+++ b/VRChat/15/1146815.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O/MdQMse6SZaQ96alv+OSARgYHbPdCrFmc1JYQJW5Vg="></script>
+    "iJzEx+jpHjcKvoHiIIZlQA1OeDSu5sCYahaWoRlwzqA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ネコメイド　ケモノ度増し01 (voxデータのみver)","description":"ネコ×メイドさんモチーフのアバターです。\n（尻尾はオオカミかも）\n\n■ノーマル版（https://gazeneko.booth.pm/items/1146755）との違い\n・マズルを追加しました\n・ブーツ→ケモノ足に変更しました\n・尻尾を縦横高さそれぞれ1.5倍くらいに拡大しました\n\n新しいケモ足と尻尾でモフモフしてください。\n足裏にも模様があります。\n\nVRChatでの使用を想定していますが、VRChat以外での使用も可能です。\n\n\n\n","url":"https://booth.pm/ja/items/1146815","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4d6f2034-e84e-4154-9cf0-4faceacc732a/i/1146815/482ee19c-1432-4104-9040-68e6f59fc681_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O/MdQMse6SZaQ96alv+OSARgYHbPdCrFmc1JYQJW5Vg="></script>
+    nonce="iJzEx+jpHjcKvoHiIIZlQA1OeDSu5sCYahaWoRlwzqA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
