--- a/VRChat/43/1146743.html
+++ b/VRChat/43/1146743.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "K4nPdMdDGdKRp73gmM4vAShN6jLr3rfgnc3QMBHz5jg="></script>
+    "zR3onBkcQcUTlGiaglDO+wJJWoWTmoAQ9VOkZUA1mBA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[光源対応] KKshader-Lit-simple [VRChat対応]","description":"Q.これは何？\nA.VRChatでの利用を想定して作られたUnityシェーダー KKshader-Lit シリーズのお試し版です\n　気に入っていただけましたら、より高機能な KKshader-Lit ( URL: https://karasuma-kuro.booth.pm/items/987299 )もお勧めさせていただきます\n\nQ.何ができるの？\nA.VRChatなどで、ライトの色などに合わせた陰影が出るシェーダーです\n・ノーマルマップに対応しています\n・シェーダー単独でのカラー変更機能があります（カラーブレンド(加算、乗算)機能および、HSV方式のカラー調整機能）\n・スペキュラ反射を追加しました\n\nQ.KKshader-Litとどこが違うの？\nA.お試し用として一部の機能のみに絞り、設定項目がシンプルになっています\n　また、ライセンスがMITLicenseになっており、気軽な利用が可能になっています\n\n","url":"https://booth.pm/ja/items/1146743","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/1146743/b351b81d-206e-4b80-8b12-719544fa4b5d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K4nPdMdDGdKRp73gmM4vAShN6jLr3rfgnc3QMBHz5jg="></script>
+    nonce="zR3onBkcQcUTlGiaglDO+wJJWoWTmoAQ9VOkZUA1mBA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146743/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146743/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
