--- a/VRChat/24/1146624.html
+++ b/VRChat/24/1146624.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2cvU3p5V39OntF7cyMmjf48HlrvTBcxPsNbJN5n0Zxg="></script>
+    "Ayn9Wqu9hq7UmDnnvCM6cD3MrgjWTWYOZRCOD4BepbY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル【イルカ】","description":"VRChat向け3Dモデル【イルカ】です。\nポリゴン数は8852です。\nVRchatでの使用を想定して販売していますが、ゲームや配信、商用利用等にも使えます。\n二次配布は改変したものも含め禁止です。（VRCのアバターペデスタル含む）\n\n内容\n・unitypackage(モデルデータ（FBXとPNG）とVRCSDK設定済みprefabデータ)\n・モデルデータ（FBX+PNG）","url":"https://booth.pm/ja/items/1146624","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/472e2c7e-f67e-4208-a492-0fe806b258e0/i/1146624/b54bda62-ef9d-4d31-b231-48b070fac063_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2cvU3p5V39OntF7cyMmjf48HlrvTBcxPsNbJN5n0Zxg="></script>
+    nonce="Ayn9Wqu9hq7UmDnnvCM6cD3MrgjWTWYOZRCOD4BepbY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
