updated at: 2023-04-25 17:54, ポチ袋 - ペトリコール - BOOTH

--- a/VRChat/67/1146567.html
+++ b/VRChat/67/1146567.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xqx5yy2KV28e8H7GGKk1dkG3GGUHulcJvfVLVTk4Odc="></script>
+    "QEsu/jQeWl0Q61OOUmS1JYNumunJncEQfD/meGR9RtU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ポチ袋","description":"シンプルなポチ袋です。\nアニメーションで取り出してお年玉を配ることが出来ます。\n\n\nポリゴン数２３４△\nFBXファイルとテクスチャが１つ入っています。\n\n-利用規約-\n商用非商用を問わず自由にお使いいただけます。\n\n自作発言と単体での再配布は禁止します。\nアバターペデスタルでの利用や、アバターに組み込む形で譲渡することを許可します。\n\n何かありましたらtwitterアカウント(@makitorion)までお願いします","url":"https://booth.pm/ja/items/1146567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9acc3a5a-1c6d-4055-a999-cdd91a9e8240/i/1146567/ebc444db-4bbb-4f12-a18a-bb1e92e934ec_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xqx5yy2KV28e8H7GGKk1dkG3GGUHulcJvfVLVTk4Odc="></script>
+    nonce="QEsu/jQeWl0Q61OOUmS1JYNumunJncEQfD/meGR9RtU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146567/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146567/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
