--- a/VRChat/05/1146505.html
+++ b/VRChat/05/1146505.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ikd5RLBOpyU5ldi6WmkEKX9+aM6Kd1VdN+1Ng10KR+o="></script>
+    "hby71UYvImEn7zpBdaZAD5H8jz7AeTZV8et9kqbkJ28="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「パンダコ」","description":"■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル「パンダコ」です。\nVRChatでの使用を想定しています。\n\nパンダになりたい女の子です。\n\n\n※フルボディトラッキングでの動作は確認しておりません。\nLip Sync VRChat標準 + MMD標準\nシェイプキー 34種（Eye Tracking、Lip Syncを除く）\nEye Tracking対応\nDynamic Bone対応（前髪、横髪、、後髪、胸）\n\nsynqarkさんのArktoon-Shadersを使わせていただいています。","url":"https://booth.pm/ja/items/1146505","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1146505/43cb95d4-dd9b-4fd7-b22f-12b664522ce3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ikd5RLBOpyU5ldi6WmkEKX9+aM6Kd1VdN+1Ng10KR+o="></script>
+    nonce="hby71UYvImEn7zpBdaZAD5H8jz7AeTZV8et9kqbkJ28="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1146505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              271
+                              272
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1146505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              271
+                              272
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
