--- a/VRChat/31/1145831.html
+++ b/VRChat/31/1145831.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JIF4FPV/pUJsiCQL3KZppc2FASh/NW31ORq/9QCqOtg="></script>
+    "CmyPGcC8XoxOshWN/xYmJ9XZ+QO4BGTXX8IIVnmT2sM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャンプーハット（無料配布あり）","description":"『シャンプーハット』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\n温泉とかで使う。\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n作者詐称：不可\n改変：可\n商用利用；可\n再配布：不可\nアバターやワールドへの同梱：可\n\n----------------------\n\n更新履歴\n\n2018/12/22 リリース\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1145831","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1145831/ce19c581-0721-43ed-981f-0348c4f410a5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JIF4FPV/pUJsiCQL3KZppc2FASh/NW31ORq/9QCqOtg="></script>
+    nonce="CmyPGcC8XoxOshWN/xYmJ9XZ+QO4BGTXX8IIVnmT2sM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1145831/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1145831/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
