updated at: 2023-04-25 17:55, 【VRMのみ】NEKO FANTASY 戦士 - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/09/1145509.html
+++ b/VRChat/09/1145509.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GptBFXeEo4aw9OSOcuEo28MPFXUlkBX5KlmILivXStM="></script>
+    "ZdTzEEZl0VjzpRLPh7j3KCwMSPTl38C61I+06RDsNJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 戦士","description":"[VRMのみ] アバター　「NEKO FANTASY 戦士」\n\nポリゴン数：10277\n\nリップシンク対応\n感情表現はありませんが「equip」で剣と盾を持ちます。\n\n5種類のねこ柄を個別に購入できます。\n\n「all in one package 全部パック」は5種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\n＜アップデート＞\n2022.01.31　視点位置の設定を変更しました。\n2022.01.30　アウトラインの設定を変更しました。\n2022.01.29　VRM版のみ再販。テクスチャの変更、剣と盾を持つシェイプキーを追加。その他細かな部分を調整しました。","url":"https://booth.pm/ja/items/1145509","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1145509/d7bfea89-318f-4af5-aef1-9e8b080a1996_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GptBFXeEo4aw9OSOcuEo28MPFXUlkBX5KlmILivXStM="></script>
+    nonce="ZdTzEEZl0VjzpRLPh7j3KCwMSPTl38C61I+06RDsNJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1145509/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1145509/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
