updated at: 2023-04-25 17:57, VRC向け キャンディケイン - Sacchan_VRC - BOOTH

--- a/VRChat/73/1144673.html
+++ b/VRChat/73/1144673.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "X+EO+UEu8bD7Gv2mTaqKltim58Gez5uKZ0z1MmtRc1M="></script>
+    "b8zsSgI/m/X5dsCaI8MRbBXG7qz6MrFahvdxCiTWZWk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" VRC向け キャンディケイン","description":"FBX PNG 形式\nポリゴン数は2076\n改変 OK\n再配布 OK","url":"https://booth.pm/ja/items/1144673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4076e1f7-b0f6-4ccc-b2e6-719466e98947/i/1144673/d5c4bb48-7bd0-402f-b3c2-4f023396c99b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="X+EO+UEu8bD7Gv2mTaqKltim58Gez5uKZ0z1MmtRc1M="></script>
+    nonce="b8zsSgI/m/X5dsCaI8MRbBXG7qz6MrFahvdxCiTWZWk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
