updated at: 2023-04-25 17:57, 1_サンタ帽子 - ガーリャの100円ショップ - BOOTH

--- a/VRChat/05/1144205.html
+++ b/VRChat/05/1144205.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yvu+PEEV54lim+5Apncau8TWefZzlb4LpX/LZ9Tu250="></script>
+    "YFT/SDO5KQNkQJcNiZ8n6mUZbWPOhV6kaMkLk9h9Z5w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"1_サンタ帽子","description":"vrchat用のオリジナル３Ｄモデルです。\n\n頭部のボーンに帽子を配置して使用してください。\n\n１２個のボーンで微調整を行い、頭にフィットさせることが可能です。\n\n画像はサンプルとなっており、キャラクターやマテリアルは付属しておりません。\n\n\n■ファイル構成\n\n・readme\n・モデルデータ .fbxファイル\n・テクスチャ　png 及びUVレイヤーのあるPSDデータ\n\n","url":"https://booth.pm/ja/items/1144205","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3114deea-0188-440b-baa6-9f46de468b52/i/1144205/a871a6f2-1017-4d44-ad43-1d0f23950387_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yvu+PEEV54lim+5Apncau8TWefZzlb4LpX/LZ9Tu250="></script>
+    nonce="YFT/SDO5KQNkQJcNiZ8n6mUZbWPOhV6kaMkLk9h9Z5w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144205/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144205/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
