updated at: 2023-04-25 18:00, 天使様の入れ物 - 烏箱 - BOOTH

--- a/VRChat/27/1141127.html
+++ b/VRChat/27/1141127.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GK2Qw3+1MMYkeM9aECdMCDrIQQC8i9WPr2w8F0/eDF0="></script>
+    "GaxMPtKYu1p8oEZ7c8/4QoSa6pIWK9DwlVKoCaN1xqU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"天使様の入れ物","description":"あの子はきっと中で夢でも見ていることでしょう\n「R-9Cのアレ」イメージです\nテキスト無しのテクスチャも付属しているので、色を変えるなり中にいる子の写真を張るなりお好きにどうぞ。\n君だけの天使様を作ろう！\n\n・ポリゴン数：3292\n・改変:可\n・商用利用:不可\n・再配布:不可\n・バイド物質含有率：無","url":"https://booth.pm/ja/items/1141127","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9d628343-8c42-4954-af0a-3cec6c0cf6d7/i/1141127/3cc9ae1a-dc9c-4835-afc7-fb9fa5b37995_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GK2Qw3+1MMYkeM9aECdMCDrIQQC8i9WPr2w8F0/eDF0="></script>
+    nonce="GaxMPtKYu1p8oEZ7c8/4QoSa6pIWK9DwlVKoCaN1xqU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1141127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1141127/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
