updated at: 2023-04-25 18:00, Sports Assult Rifle &quot;GA-01A1&quot;（民間向けスポーツライフル） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/76/1139776.html
+++ b/VRChat/76/1139776.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EoqUSAd5mbmWxl7JWakRk5mEOCfM4s5g2Ql49VfVOvo="></script>
+    "4cMQDpHpKI6nnB6y5scztHHhtezILyHySr3KemXc0v0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Sports Assult Rifle \"GA-01A1\"（民間向けスポーツライフル）","description":"Virtual Collection Stage0にアザトナナ（ななや）さんの為に製作した民間向けスポーツライフルです。\n\nシェイプキーによって各ギミックが可動します\n\nSketchfabで3Dモデルを閲覧することができます\nStandardシェーダー向きのPBRテクスチャと、トゥーン系シェーダー向きのColorテクスチャを用意しています\n\nポリゴン数　△：9167\n※普段見えない弾丸を除くと△：7695\n\n注意：ポリゴン数が非常に多いです　VRCのポリゴン制限が7万に緩和されていますが、ポリゴン数は多い部類に入るのでご注意下さい\n\n※モデル：アザトナナ(ななや)さん\n\nサードパーティですが、光学倍率サイトが販売されていました\nhttps://yukiyukivirtual.booth.pm/items/1144206\n\nフラッシュライトも他の方によって販売されています\nhttps://booth.pm/ja/items/1153579 \n","url":"https://booth.pm/ja/items/1139776","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1139776/3e1af68c-d760-4ed2-91f8-fa1077b74f0f_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EoqUSAd5mbmWxl7JWakRk5mEOCfM4s5g2Ql49VfVOvo="></script>
+    nonce="4cMQDpHpKI6nnB6y5scztHHhtezILyHySr3KemXc0v0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -124,6 +121,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -138,7 +137,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -181,7 +181,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139776/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               152
@@ -196,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139776/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               152
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
