updated at: 2023-04-25 18:02, 【オリジナル3Dモデル】アルドラ(Aldra) - スピカ荘 - BOOTH

--- a/VRChat/66/1139566.html
+++ b/VRChat/66/1139566.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nQrX6OYP/exFfiwQ8cvLKezL76LXmbLGmPlsN60MPM4="></script>
+    "FaW+LwD1QMscr99WM4kSImQTqHRvvBggPuaSnNKZlrI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】アルドラ(Aldra)","description":"UnityのHumanoid対応のオリジナル3Dモデルです。\n「あ、い、う、え、お」のリップシンク用シェイプと\n左右で分けた目のシェイプがありますので自分で表情を作ることができます。\n\n\n-以下同梱規約の抜粋-(Extract of Terms of Service)\n\n-免責事項-\n・本データを使用し、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n-利用条件について-\n当モデルデータ及び付属データの利用に関しましては以下のように定めます。\n・本モデルは営利目的の使用が可能です。（ゲーム、動画、画像、配信等）\n・本モデルはR-18、R-18Gでの使用が可能です。\n・本モデルの改変、及び再配布は自由です。\n\n\n\n-内容物について-\n.blendデータ（パーツ結合前、済）\nモデルデータ（fbx）\nテクスチャデータ（UV画像、テクスチャ画像、psd、AO、UV）\nunitypackage\nreadme\n\n- Disclaimer -\n· Please understand that we can not assume the responsibility even if some inconvenience occurs by using this data.\n· Conditions are subject to change without prior notice.\n\n\n- Terms of use -\nRegarding the use of this model data and attached data, it is decided as follows.\n· wordings of any translated versions of this Terms of use, the meaning and wording of the japanese Language version shall prevail.\n· This model can be used for commercial purposes. (Game, movie, image, distribution etc.)\n· This model can be used with R-18, R-18G.","url":"https://booth.pm/ja/items/1139566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a85e65d9-8155-4fab-9fb3-6639d6b122df/i/1139566/229215b1-d4c4-47b2-825d-a7894a457599_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nQrX6OYP/exFfiwQ8cvLKezL76LXmbLGmPlsN60MPM4="></script>
+    nonce="FaW+LwD1QMscr99WM4kSImQTqHRvvBggPuaSnNKZlrI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
