updated at: 2023-04-25 18:04, シャルロット写真集 Vol.0 - STUDIO HIGRASHI - BOOTH

--- a/VRChat/98/1137898.html
+++ b/VRChat/98/1137898.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fyc48HTP96ozbZoE93P+orT5xRm2ISAmCRNmOeN4TXc="></script>
+    "7blB+IdwNB7PUdmq7tfSWYf3g1OFSYI1C6fNksVDon8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャルロット写真集 Vol.0","description":"Kakkoii（カッコいい）を求め、布教するHigrashiによるシャーロ改変アバター「シャルロット＝レッドグレイヴ」のVRChat写真集。\n今回は需要を見極めるための試供品。写真総数は少なめの25枚。\nzipファイルで約73MBあります。\n\n反響が大きければシリーズ化予定。","url":"https://booth.pm/ja/items/1137898","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/293876ef-983d-4aaf-9509-0b1beae881cf/i/1137898/755724e1-285c-4a25-b474-81e110c2e59d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fyc48HTP96ozbZoE93P+orT5xRm2ISAmCRNmOeN4TXc="></script>
+    nonce="7blB+IdwNB7PUdmq7tfSWYf3g1OFSYI1C6fNksVDon8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137898/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137898/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
